# clipboard-master

./: Cargo.toml  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: rust.yml
src/: cli.rs  lib.rs  main.rs
src/master/: mac.rs  mod.rs  win32.rs  x11.rs
src/process/: magnet.rs  mod.rs  trim.rs
tests/: shutdown.rs
