[package]
name = "clipboard-master"
version = "3.0.0"
authors = ["Douman <douman@gmx.se>"]
keywords = ["Windows", "winapi", "clipboard"]
description = "Simple utility crate to monitor clipboard changes"

homepage = "https://github.com/DoumanAsh/clipboard-master"
repository = "https://github.com/DoumanAsh/clipboard-master"
documentation = "https://docs.rs/clipboard-master/*/x86_64-pc-windows-msvc/clipboard_master/"

license = "MIT"
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
windows-win = "2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "winuser"
]

[badges]
appveyor = { repository = "DoumanAsh/clipboard-master"}
