[package]
name = "clipboard-master"
version = "3.1.1"
authors = ["Douman <douman@gmx.se>"]
keywords = ["Windows", "winapi", "clipboard"]
description = "Simple utility crate to monitor clipboard changes"

homepage = "https://github.com/DoumanAsh/clipboard-master"
repository = "https://github.com/DoumanAsh/clipboard-master"

license = "MIT"
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
windows-win = "2"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "winuser"
]

[target.'cfg(all(unix, not(any(target_os="macos", target_os="ios", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = "0.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc_id = "0.1"
objc-foundation = "0.1"
