[package]
name = "clipboard-master"
version = "4.0.0-beta.6"
authors = ["Douman <douman@gmx.se>"]
keywords = ["Windows", "winapi", "clipboard"]
description = "Simple utility crate to monitor clipboard changes"

homepage = "https://github.com/DoumanAsh/clipboard-master"
repository = "https://github.com/DoumanAsh/clipboard-master"

license = "MIT"
readme = "README.md"
edition = "2018"

[target.'cfg(windows)'.dependencies]
windows-win = "3"

[target.'cfg(all(unix, not(any(target_os="macos", target_os="ios", target_os="android", target_os="emscripten"))))'.dependencies]
x11-clipboard = "0.9"
x11rb = { version = "0.13", features = ["xfixes"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5.2" }
objc2-app-kit = { version = "0.2.2", features = ["NSPasteboard"] }

[features]
cargo-clippy = []
